--- a/myblog/src/main/webapp/WEB-INF/web.xml
+++ b/myblog/src/main/webapp/WEB-INF/web.xml
@@ -2,19 +2,19 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	id="WebApp_ID" version="3.0" >
-	
+	id="WebApp_ID" version="3.0">
+
 	<!-- 上下文配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:application-context.xml</param-value>
-	</context-param>	
-	
+	</context-param>
+
 	<!-- Spring监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<!-- spring mvc 配置文件 -->
 	<servlet>
 		<servlet-name>spring-mvc</servlet-name>
@@ -26,11 +26,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<!-- 
-			/      : 拦截所有请求（但不包括.jsp,需配置对静态资源放行）
-			/*     : 拦截所有请求（真*全拦截，基本不用）
-			/*.do  : .do 
-		 -->
+		<!-- / : 拦截所有请求（但不包括.jsp,需配置对静态资源放行） /* : 拦截所有请求（真*全拦截，基本不用） /*.do : .do -->
 		<servlet-name>spring-mvc</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
@@ -46,6 +42,16 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<!-- shiro -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
